Add tree walls and overlays